maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:46: error: not found: value &&
    if(getX()<getMondeLargeur()-1) && !aMurOuest(getX()+1,getY() && getIndication(getX()+1,getY())<ind ) {
                                   ^JediEscaper:46: error: value && is not a member of Int
    if(getX()<getMondeLargeur()-1) && !aMurOuest(getX()+1,getY() && getIndication(getX()+1,getY())<ind ) {
                                                                 ^